# shotbuddy

./: .gitignore  AGENTS.md  CHANGELOG.md  DEV_NOTES.md  GEMINI.md  LICENSE.txt  QWEN.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt  run.py  shotbuddy.cfg
.github/: FUNDING.yml
app/: __init__.py  utils.py
app/config/: constants.py
app/routes/: project_routes.py  shot_routes.py
app/services/: file_handler.py  project_manager.py  prompt_importer.py  shot_manager.py
app/static/css/: main.css  styles.css
app/static/js/: main.js
app/templates/: index.html
shots/wip/SH010/: meta.json
