[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "shotbuddy"
version = "2.1.0"
description = "AI-driven image-to-video filmmaking workflow manager"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Taruma Sakti" },
  { name = "Albert Bozesan" }
]
requires-python = ">=3.13.1"
dependencies = [
  "flask",
  "flask-cors",
  "pillow",
  "python-dotenv>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/taruma/shotbuddy"
Repository = "https://github.com/taruma/shotbuddy"
Issues = "https://github.com/taruma/shotbuddy/issues"

[tool.uv]
package = false
