[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "shotbuddy"
version = "3.1.0"
description = "AI-driven image-to-video filmmaking workflow manager"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Taruma Sakti" },
  { name = "Albert Bozesan" }
]
requires-python = ">=3.13.1"
dependencies = [
  "flask",
  "flask-cors",
  "pillow",
  "python-dotenv>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/taruma/shotbuddy"
Repository = "https://github.com/taruma/shotbuddy"
Issues = "https://github.com/taruma/shotbuddy/issues"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "S"]  # Style, Pyflakes, isort, pyupgrade, security
ignore = ["E501"]  # Ignore line length for now
target-version = "py313"
